<resources>
    <string name="app_name">CINews</string>
    <string name="xinwen">新闻</string>
    <string name="tupian">图片</string>
    <string name="souchangjia">收藏夹</string>
    <string name="shipin">视频</string>
    <string name="queding">确定</string>
    <string name="quxiao">取消</string>
    <string name="no_network">当前无可用网络</string>
    <string name="goto_net_setting">是否跳转到网络设置界面?</string>
    <string name="shujujiazaizhong">数据正在加载中...</string>
    <array name="new_title_list">
        <item>产业新闻</item>
        <item>动漫游戏</item>
        <item>工艺美术</item>
        <item>休闲旅游</item>
        <item>园区基地</item>
        <item>演艺传媒</item>
        <item>文化金融</item>
        <item>协会动态</item>
    </array>
    <array name="sliding_list">
        <item>离线视频</item>
        <item>夜间模式</item>
        <item>关于</item>
    </array>
    <array name="sliding_list_night">
        <item>离线视频</item>
        <item>日间模式</item>
        <item>关于</item>
    </array>


    <string name="methodname">getlistartile</string>

    <string name="id">69e8ad24-76f8-40c3-9e6c-f09c4eb39839</string>
    <string name="share">分享:</string>
    <string name="more_vedio">更多视频</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="auth_error">抱歉,授权操作遇到错误!</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="denglu">登录</string>
    <string name="index">www.jxci.cn</string>

    <integer name="page">1</integer>


    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="zanbuzhiciqitaaddenglu">暂不支持其他第三方登录!</string>
    <string name="haoxiangchuxianleyidianwenti">视频好像出现了一点问题!</string>
    <string name="bofangwancheng">播放完成.</string>
    <string name="weixinzhanweikaitong">微信登录暂未开通...</string>
    <string name="tuichuchenggong">退出成功!</string>
    <string name="qingxiandenglu">请先登录!</string>
    <string name="zaianyicituichu">再按一次退出程序</string>
    <string name="tianqixinxihuoqushibai">天气信息获取失败!</string>

</resources>
