<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_loading"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jju.yuxin.cinews.activity.LoadingActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loading"/>


    <LinearLayout
        android:id="@+id/show_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@drawable/loading_shape"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/alert_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_color"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_s"
            android:paddingTop="@dimen/dimen_s"
            android:text="@string/no_network"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size22"/>

        <TextView
            android:id="@+id/alert_Message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_s"
            android:paddingTop="@dimen/dimen_s"
            android:text="@string/goto_net_setting"
            android:textSize="@dimen/text_size18"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/high_1px"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_s"
                android:layout_weight="1"
                android:background="@drawable/bt_normal_red_selector"
                android:text="@string/queding"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/bt_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_s"
                android:layout_weight="1"
                android:background="@drawable/bt_normal_gray_selector"
                android:text="@string/quxiao"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
